--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Darrel</title>
+		<title>@darrelhong</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,9 +21,10 @@
 						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 						<h1>Darrel Hong</h1>
 						<ul class="icons">
-							<li><a title="Telegram" href="https://t.me/darrelhong" class="icon style2 fa-comment"><span class="label">Twitter</span></a></li>
-							<li><a tite="Resume" href="https://drive.google.com/file/d/1OpOPtzJhVUBZlk8hLRwnvdXl7tTz7LMU/view?usp=sharing" class="icon style2 fa-file"><span class="label">Facebook</span></a></li>
-							<li><a title="My GitHub" href="https://github.com/darrelhong" class="icon style2 fa-github"><span class="label">500px</span></a></li>
+							<li><a title="Telegram" href="https://t.me/darrelhong" class="icon style2 fa-comment"><span class="label">Telegram</span></a></li>
+							<li><a title="Resume" href="https://drive.google.com/file/d/1OpOPtzJhVUBZlk8hLRwnvdXl7tTz7LMU/view?usp=sharing" class="icon style2 fa-file"><span class="label">Resume</span></a></li>
+							<li><a title="LinkedIn" href="https://www.linkedin.com/in/darrelhong/" class="icon style2 fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+							<li><a title="My GitHub" href="https://github.com/darrelhong" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
 							<li><a title="Email me!" href="mailto:darrel.hong@gmail.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 					</header>
@@ -34,36 +35,120 @@
 						<!-- Thumbnails -->
 							<section class="thumbnails">
 								<div>
-									<a href="images/fulls/01.jpg">
-										<img src="images/thumbs/01.jpg" alt="" />
+									<a href="images/fulls/seattleunionstation.jpeg">
+										<img src="images/thumbs/seattleunionstation.jpeg" alt="" />
 										<h3>Lorem ipsum dolor sit amet</h3>
 									</a>
-									<a href="images/fulls/02.jpg">
-										<img src="images/thumbs/02.jpg" alt="" />
+									<a href="images/fulls/sergelfontänen.jpeg">
+										<img src="images/thumbs/sergelfontänen.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/goldengate.jpeg">
+										<img src="images/thumbs/goldengate.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<br>
+									<br>
+									<a href="images/fulls/canadaplace.jpeg">
+										<img src="images/thumbs/canadaplace.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<br>
+									<a href="images/fulls/nyhavn.jpeg">
+										<img src="images/thumbs/nyhavn.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/oslovinterpark.jpeg">
+										<img src="images/thumbs/oslovinterpark.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<br>
+									<a href="images/fulls/shsnow.jpeg">
+										<img src="images/thumbs/shsnow.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/woodwards43.jpeg">
+										<img src="images/thumbs/woodwards43.jpeg" alt="" />
 										<h3>Lorem ipsum dolor sit amet</h3>
 									</a>
 								</div>
+
 								<div>
-									<a href="images/fulls/03.jpg">
-										<img src="images/thumbs/03.jpg" alt="" />
+									<a href="images/fulls/sigtuna.jpeg">
+										<img src="images/thumbs/sigtuna.jpeg" alt="" />
 										<h3>Lorem ipsum dolor sit amet</h3>
 									</a>
-									<a href="images/fulls/04.jpg">
-										<img src="images/thumbs/04.jpg" alt="" />
+									<a href="images/fulls/hollywood.jpeg">
+										<img src="images/thumbs/hollywood.jpeg" alt="" />
 										<h3>Lorem ipsum dolor sit amet</h3>
 									</a>
-									<a href="images/fulls/05.jpg">
-										<img src="images/thumbs/05.jpg" alt="" />
+									<br>
+									<a href="images/fulls/kungsgatan.jpeg">
+										<img src="images/thumbs/kungsgatan.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/vancouverport.jpeg">
+										<img src="images/thumbs/vancouverport.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/elcapitan.jpeg">
+										<img src="images/thumbs/elcapitan.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/oslooperahuset.jpeg">
+										<img src="images/thumbs/oslooperahuset.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/seacressparkseattle.jpeg">
+										<img src="images/thumbs/seacressparkseattle.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<br>
+									<a href="images/fulls/santamoncabeach.jpeg">
+										<img src="images/thumbs/santamoncabeach.jpeg" alt="" />
 										<h3>Lorem ipsum dolor sit amet</h3>
 									</a>
 								</div>
+
 								<div>
-									<a href="images/fulls/06.jpg">
-										<img src="images/thumbs/06.jpg" alt="" />
+									<a href="images/fulls/leavenworth.jpeg">
+										<img src="images/thumbs/leavenworth.jpeg" alt="" />
 										<h3>Lorem ipsum dolor sit amet</h3>
 									</a>
-									<a href="images/fulls/07.jpg">
-										<img src="images/thumbs/07.jpg" alt="" />
+									<br>
+									<a href="images/fulls/lionsgatebridge.jpg">
+										<img src="images/thumbs/lionsgatebridge.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/mapletreesquare.jpeg">
+										<img src="images/thumbs/mapletreesquare.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/seattlenight.jpg">
+										<img src="images/thumbs/seattlenight.jpg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/mapletreesquare2.jpeg">
+										<img src="images/thumbs/mapletreesquare2.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<br>
+									<br>
+									<a href="images/fulls/pacificpark.jpeg">
+										<img src="images/thumbs/pacificpark.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/sfboat.jpeg">
+										<img src="images/thumbs/sfboat.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<a href="images/fulls/t-centralen.jpeg">
+										<img src="images/thumbs/t-centralen.jpeg" alt="" />
+										<h3>Lorem ipsum dolor sit amet</h3>
+									</a>
+									<br>
+									<a href="images/fulls/vancouverportnight.jpeg">
+										<img src="images/thumbs/vancouverportnight.jpeg" alt="" />
 										<h3>Lorem ipsum dolor sit amet</h3>
 									</a>
 								</div>
@@ -73,7 +158,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p>&copy; Darrel. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Demo Images: <a href="http://unsplash.com">Unsplash</a>.</p>
+						<p>&copy; Darrel. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Images: Darrel</p>
 					</footer>
 
 			</div>
