--- a/index.html
+++ b/index.html
@@ -1,173 +1,216 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Visualize by TEMPLATED
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>@darrelhong</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body>
+  <head>
+    <title>@darrelhong</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body>
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Header -->
+      <header id="header">
+        <span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+        <h1>Darrel Hong</h1>
+        <ul class="icons">
+          <li>
+            <a
+              title="Telegram"
+              href="https://t.me/darrelhong"
+              class="icon style2 fa-comment"
+              target="_blank"
+              ><span class="label">Telegram</span></a
+            >
+          </li>
+          <li>
+            <a
+              title="Resume"
+              href="https://drive.google.com/file/d/1OpOPtzJhVUBZlk8hLRwnvdXl7tTz7LMU/view?usp=sharing"
+              class="icon style2 fa-file"
+              target="_blank"
+              ><span class="label">Resume</span></a
+            >
+          </li>
+          <li>
+            <a
+              title="LinkedIn"
+              href="https://www.linkedin.com/in/darrelhong/"
+              class="icon style2 fa-linkedin-square"
+              target="_blank"
+              ><span class="label">LinkedIn</span></a
+            >
+          </li>
+          <li>
+            <a
+              title="My GitHub"
+              href="https://github.com/darrelhong"
+              class="icon style2 fa-github"
+              target="_blank"
+              ><span class="label">GitHub</span></a
+            >
+          </li>
+          <li>
+            <a
+              title="Email me!"
+              href="mailto:darrel.hong@gmail.com"
+              class="icon style2 fa-envelope-o"
+              target="_blank"
+              ><span class="label">Email</span></a
+            >
+          </li>
+        </ul>
+      </header>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+      <!-- Main -->
+      <section id="main">
+        <!-- Thumbnails -->
+        <section class="thumbnails">
+          <div>
+            <a href="images/fulls/seattleunionstation.jpeg">
+              <img
+                src="images/thumbs/seattleunionstation.jpeg"
+                loading="lazy"
+              />
+              <h3>Union Station</h3>
+            </a>
+            <a href="images/fulls/sergelfontänen.jpeg">
+              <img src="images/thumbs/sergelfontänen.jpeg" loading="lazy" />
+              <h3>Sergelfontänen</h3>
+            </a>
+            <a href="images/fulls/goldengate.jpeg">
+              <img src="images/thumbs/goldengate.jpeg" loading="lazy" />
+              <h3>Golden Gate Bridge</h3>
+            </a>
+            <br />
+            <br />
+            <a href="images/fulls/canadaplace.jpeg">
+              <img src="images/thumbs/canadaplace.jpeg" loading="lazy" />
+              <h3>Coal Harbour</h3>
+            </a>
+            <br />
+            <a href="images/fulls/nyhavn.jpeg">
+              <img src="images/thumbs/nyhavn.jpeg" loading="lazy" />
+              <h3>Nyhavn</h3>
+            </a>
+            <a href="images/fulls/oslovinterpark.jpeg">
+              <img src="images/thumbs/oslovinterpark.jpeg" loading="lazy" />
+              <h3>Vinterpark</h3>
+            </a>
+            <br />
+            <a href="images/fulls/shsnow.jpeg">
+              <img src="images/thumbs/shsnow.jpeg" loading="lazy" />
+              <h3>Gallerian</h3>
+            </a>
+            <a href="images/fulls/woodwards43.jpeg">
+              <img src="images/thumbs/woodwards43.jpeg" loading="lazy" />
+              <h3>Woodwards 43</h3>
+            </a>
+          </div>
 
-				<!-- Header -->
-					<header id="header">
-						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-						<h1>Darrel Hong</h1>
-						<ul class="icons">
-							<li><a title="Telegram" href="https://t.me/darrelhong" class="icon style2 fa-comment" target="_blank"><span class="label">Telegram</span></a></li>
-							<li><a title="Resume" href="https://drive.google.com/file/d/1OpOPtzJhVUBZlk8hLRwnvdXl7tTz7LMU/view?usp=sharing" class="icon style2 fa-file" target="_blank"><span class="label">Resume</span></a></li>
-							<li><a title="LinkedIn" href="https://www.linkedin.com/in/darrelhong/" class="icon style2 fa-linkedin-square" target="_blank"><span class="label">LinkedIn</span></a></li>
-							<li><a title="My GitHub" href="https://github.com/darrelhong" class="icon style2 fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-							<li><a title="Email me!" href="mailto:darrel.hong@gmail.com" class="icon style2 fa-envelope-o" target="_blank"><span class="label">Email</span></a></li>
-						</ul>
-					</header>
+          <div>
+            <a href="images/fulls/sigtuna.jpeg">
+              <img src="images/thumbs/sigtuna.jpeg" loading="lazy" />
+              <h3>Sigtuna</h3>
+            </a>
+            <a href="images/fulls/hollywood.jpeg">
+              <img src="images/thumbs/hollywood.jpeg" loading="lazy" />
+              <h3>Mt Lee Drive</h3>
+            </a>
+            <br />
+            <a href="images/fulls/kungsgatan.jpeg">
+              <img src="images/thumbs/kungsgatan.jpeg" loading="lazy" />
+              <h3>Kungsportsplatsen</h3>
+            </a>
+            <a href="images/fulls/vancouverport.jpeg">
+              <img src="images/thumbs/vancouverport.jpeg" loading="lazy" />
+              <h3>Vancouver Harbour</h3>
+            </a>
+            <a href="images/fulls/elcapitan.jpeg">
+              <img src="images/thumbs/elcapitan.jpeg" loading="lazy" />
+              <h3>Half Dome</h3>
+            </a>
+            <a href="images/fulls/oslooperahuset.jpeg">
+              <img src="images/thumbs/oslooperahuset.jpeg" loading="lazy" />
+              <h3>Operahuset Oslo</h3>
+            </a>
+            <a href="images/fulls/seacressparkseattle.jpeg">
+              <img
+                src="images/thumbs/seacressparkseattle.jpeg"
+                loading="lazy"
+              />
+              <h3>Seacrest Park</h3>
+            </a>
+            <br />
+            <a href="images/fulls/santamoncabeach.jpeg">
+              <img src="images/thumbs/santamoncabeach.jpeg" loading="lazy" />
+              <h3>Santa Monica Beach</h3>
+            </a>
+          </div>
 
-				<!-- Main -->
-					<section id="main">
+          <div>
+            <a href="images/fulls/leavenworth.jpeg">
+              <img src="images/thumbs/leavenworth.jpeg" loading="lazy" />
+              <h3>Enchanment Park</h3>
+            </a>
+            <br />
+            <a href="images/fulls/lionsgatebridge.jpg">
+              <img src="images/thumbs/lionsgatebridge.jpg" loading="lazy" />
+              <h3>Lions Gate Bridge</h3>
+            </a>
+            <a href="images/fulls/mapletreesquare.jpeg">
+              <img src="images/thumbs/mapletreesquare.jpeg" loading="lazy" />
+              <h3>Carrall St</h3>
+            </a>
+            <a href="images/fulls/seattlenight.jpg">
+              <img src="images/thumbs/seattlenight.jpg" loading="lazy" />
+              <h3>Seattle Downtown</h3>
+            </a>
+            <a href="images/fulls/mapletreesquare2.jpeg">
+              <img src="images/thumbs/mapletreesquare2.jpeg" loading="lazy" />
+              <h3>Maple Tree Square</h3>
+            </a>
+            <br />
+            <br />
+            <a href="images/fulls/pacificpark.jpeg">
+              <img src="images/thumbs/pacificpark.jpeg" loading="lazy" />
+              <h3>Pacific Park</h3>
+            </a>
+            <a href="images/fulls/sfboat.jpeg">
+              <img src="images/thumbs/sfboat.jpeg" loading="lazy" />
+              <h3>Fisherman's Wharf</h3>
+            </a>
+            <a href="images/fulls/t-centralen.jpeg">
+              <img src="images/thumbs/t-centralen.jpeg" loading="lazy" />
+              <h3>T-Centralen</h3>
+            </a>
+            <br />
+            <a href="images/fulls/vancouverportnight.jpeg">
+              <img src="images/thumbs/vancouverportnight.jpeg" loading="lazy" />
+              <h3>Gastown</h3>
+            </a>
+          </div>
+        </section>
+      </section>
 
-						<!-- Thumbnails -->
-							<section class="thumbnails">
-								<div>
-									<a href="images/fulls/seattleunionstation.jpeg">
-										<img src="images/thumbs/seattleunionstation.jpeg" alt="" />
-										<h3>Union Station</h3>
-									</a>
-									<a href="images/fulls/sergelfontänen.jpeg">
-										<img src="images/thumbs/sergelfontänen.jpeg" alt="" />
-										<h3>Sergelfontänen</h3>
-									</a>
-									<a href="images/fulls/goldengate.jpeg">
-										<img src="images/thumbs/goldengate.jpeg" alt="" />
-										<h3>Golden Gate Bridge</h3>
-									</a>
-									<br>
-									<br>
-									<a href="images/fulls/canadaplace.jpeg">
-										<img src="images/thumbs/canadaplace.jpeg" alt="" />
-										<h3>Coal Harbour</h3>
-									</a>
-									<br>
-									<a href="images/fulls/nyhavn.jpeg">
-										<img src="images/thumbs/nyhavn.jpeg" alt="" />
-										<h3>Nyhavn</h3>
-									</a>
-									<a href="images/fulls/oslovinterpark.jpeg">
-										<img src="images/thumbs/oslovinterpark.jpeg" alt="" />
-										<h3>Vinterpark</h3>
-									</a>
-									<br>
-									<a href="images/fulls/shsnow.jpeg">
-										<img src="images/thumbs/shsnow.jpeg" alt="" />
-										<h3>Gallerian</h3>
-									</a>
-									<a href="images/fulls/woodwards43.jpeg">
-										<img src="images/thumbs/woodwards43.jpeg" alt="" />
-										<h3>Woodwards 43</h3>
-									</a>
-								</div>
+      <!-- Footer -->
+      <footer id="footer">
+        <p>
+          &copy; Darrel. All rights reserved. Design:
+          <a href="http://templated.co">TEMPLATED</a>. Images: Darrel
+        </p>
+      </footer>
+    </div>
 
-								<div>
-									<a href="images/fulls/sigtuna.jpeg">
-										<img src="images/thumbs/sigtuna.jpeg" alt="" />
-										<h3>Sigtuna</h3>
-									</a>
-									<a href="images/fulls/hollywood.jpeg">
-										<img src="images/thumbs/hollywood.jpeg" alt="" />
-										<h3>Mt Lee Drive</h3>
-									</a>
-									<br>
-									<a href="images/fulls/kungsgatan.jpeg">
-										<img src="images/thumbs/kungsgatan.jpeg" alt="" />
-										<h3>Kungsportsplatsen</h3>
-									</a>
-									<a href="images/fulls/vancouverport.jpeg">
-										<img src="images/thumbs/vancouverport.jpeg" alt="" />
-										<h3>Vancouver Harbour</h3>
-									</a>
-									<a href="images/fulls/elcapitan.jpeg">
-										<img src="images/thumbs/elcapitan.jpeg" alt="" />
-										<h3>Half Dome</h3>
-									</a>
-									<a href="images/fulls/oslooperahuset.jpeg">
-										<img src="images/thumbs/oslooperahuset.jpeg" alt="" />
-										<h3>Operahuset Oslo</h3>
-									</a>
-									<a href="images/fulls/seacressparkseattle.jpeg">
-										<img src="images/thumbs/seacressparkseattle.jpeg" alt="" />
-										<h3>Seacrest Park</h3>
-									</a>
-									<br>
-									<a href="images/fulls/santamoncabeach.jpeg">
-										<img src="images/thumbs/santamoncabeach.jpeg" alt="" />
-										<h3>Santa Monica Beach</h3>
-									</a>
-								</div>
-
-								<div>
-									<a href="images/fulls/leavenworth.jpeg">
-										<img src="images/thumbs/leavenworth.jpeg" alt="" />
-										<h3>Enchanment Park</h3>
-									</a>
-									<br>
-									<a href="images/fulls/lionsgatebridge.jpg">
-										<img src="images/thumbs/lionsgatebridge.jpg" alt="" />
-										<h3>Lions Gate Bridge</h3>
-									</a>
-									<a href="images/fulls/mapletreesquare.jpeg">
-										<img src="images/thumbs/mapletreesquare.jpeg" alt="" />
-										<h3>Carrall St</h3>
-									</a>
-									<a href="images/fulls/seattlenight.jpg">
-										<img src="images/thumbs/seattlenight.jpg" alt="" />
-										<h3>Seattle Downtown</h3>
-									</a>
-									<a href="images/fulls/mapletreesquare2.jpeg">
-										<img src="images/thumbs/mapletreesquare2.jpeg" alt="" />
-										<h3>Maple Tree Square</h3>
-									</a>
-									<br>
-									<br>
-									<a href="images/fulls/pacificpark.jpeg">
-										<img src="images/thumbs/pacificpark.jpeg" alt="" />
-										<h3>Pacific Park</h3>
-									</a>
-									<a href="images/fulls/sfboat.jpeg">
-										<img src="images/thumbs/sfboat.jpeg" alt="" />
-										<h3>Fisherman's Wharf</h3>
-									</a>
-									<a href="images/fulls/t-centralen.jpeg">
-										<img src="images/thumbs/t-centralen.jpeg" alt="" />
-										<h3>T-Centralen</h3>
-									</a>
-									<br>
-									<a href="images/fulls/vancouverportnight.jpeg">
-										<img src="images/thumbs/vancouverportnight.jpeg" alt="" />
-										<h3>Gastown</h3>
-									</a>
-								</div>
-							</section>
-
-					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<p>&copy; Darrel. All rights reserved. Design: <a href="http://templated.co">TEMPLATED</a>. Images: Darrel</p>
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.poptrox.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
