--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="wrapper">
       <!-- Header -->
       <header id="header">
-        <span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+        <span class="avatar"><img src="images/avatar.webp" alt="" /></span>
         <h1>Darrel Hong</h1>
         <ul class="icons">
           <li>
@@ -25,6 +25,7 @@
               href="https://t.me/darrelhong"
               class="icon style2 fa-comment"
               target="_blank"
+              rel="noopener"
               ><span class="label">Telegram</span></a
             >
           </li>
@@ -34,6 +35,7 @@
               href="https://drive.google.com/file/d/1OpOPtzJhVUBZlk8hLRwnvdXl7tTz7LMU/view?usp=sharing"
               class="icon style2 fa-file"
               target="_blank"
+              rel="noopener"
               ><span class="label">Resume</span></a
             >
           </li>
@@ -43,6 +45,7 @@
               href="https://www.linkedin.com/in/darrelhong/"
               class="icon style2 fa-linkedin-square"
               target="_blank"
+              rel="noopener"
               ><span class="label">LinkedIn</span></a
             >
           </li>
@@ -52,6 +55,7 @@
               href="https://github.com/darrelhong"
               class="icon style2 fa-github"
               target="_blank"
+              rel="noopener"
               ><span class="label">GitHub</span></a
             >
           </li>
@@ -72,126 +76,126 @@
         <!-- Thumbnails -->
         <section class="thumbnails">
           <div>
-            <a href="images/fulls/seattleunionstation.jpeg">
+            <a href="images/fulls/seattleunionstation.webp">
               <img
-                src="images/thumbs/seattleunionstation.jpeg"
+                src="images/thumbs/seattleunionstation.webp"
                 loading="lazy"
               />
               <h3>Union Station</h3>
             </a>
-            <a href="images/fulls/sergelfontänen.jpeg">
-              <img src="images/thumbs/sergelfontänen.jpeg" loading="lazy" />
+            <a href="images/fulls/sergelfontänen.webp">
+              <img src="images/thumbs/sergelfontänen.webp" loading="lazy" />
               <h3>Sergelfontänen</h3>
             </a>
-            <a href="images/fulls/goldengate.jpeg">
-              <img src="images/thumbs/goldengate.jpeg" loading="lazy" />
+            <a href="images/fulls/goldengate.webp">
+              <img src="images/thumbs/goldengate.webp" loading="lazy" />
               <h3>Golden Gate Bridge</h3>
             </a>
             <br />
             <br />
-            <a href="images/fulls/canadaplace.jpeg">
-              <img src="images/thumbs/canadaplace.jpeg" loading="lazy" />
+            <a href="images/fulls/canadaplace.webp">
+              <img src="images/thumbs/canadaplace.webp" loading="lazy" />
               <h3>Coal Harbour</h3>
             </a>
             <br />
-            <a href="images/fulls/nyhavn.jpeg">
-              <img src="images/thumbs/nyhavn.jpeg" loading="lazy" />
+            <a href="images/fulls/nyhavn.webp">
+              <img src="images/thumbs/nyhavn.webp" loading="lazy" />
               <h3>Nyhavn</h3>
             </a>
-            <a href="images/fulls/oslovinterpark.jpeg">
-              <img src="images/thumbs/oslovinterpark.jpeg" loading="lazy" />
+            <a href="images/fulls/oslovinterpark.webp">
+              <img src="images/thumbs/oslovinterpark.webp" loading="lazy" />
               <h3>Vinterpark</h3>
             </a>
             <br />
-            <a href="images/fulls/shsnow.jpeg">
-              <img src="images/thumbs/shsnow.jpeg" loading="lazy" />
+            <a href="images/fulls/shsnow.webp">
+              <img src="images/thumbs/shsnow.webp" loading="lazy" />
               <h3>Gallerian</h3>
             </a>
-            <a href="images/fulls/woodwards43.jpeg">
-              <img src="images/thumbs/woodwards43.jpeg" loading="lazy" />
+            <a href="images/fulls/woodwards43.webp">
+              <img src="images/thumbs/woodwards43.webp" loading="lazy" />
               <h3>Woodwards 43</h3>
             </a>
           </div>
 
           <div>
-            <a href="images/fulls/sigtuna.jpeg">
-              <img src="images/thumbs/sigtuna.jpeg" loading="lazy" />
+            <a href="images/fulls/sigtuna.webp">
+              <img src="images/thumbs/sigtuna.webp" loading="lazy" />
               <h3>Sigtuna</h3>
             </a>
-            <a href="images/fulls/hollywood.jpeg">
-              <img src="images/thumbs/hollywood.jpeg" loading="lazy" />
+            <a href="images/fulls/hollywood.webp">
+              <img src="images/thumbs/hollywood.webp" loading="lazy" />
               <h3>Mt Lee Drive</h3>
             </a>
             <br />
-            <a href="images/fulls/kungsgatan.jpeg">
-              <img src="images/thumbs/kungsgatan.jpeg" loading="lazy" />
+            <a href="images/fulls/kungsgatan.webp">
+              <img src="images/thumbs/kungsgatan.webp" loading="lazy" />
               <h3>Kungsportsplatsen</h3>
             </a>
-            <a href="images/fulls/vancouverport.jpeg">
-              <img src="images/thumbs/vancouverport.jpeg" loading="lazy" />
+            <a href="images/fulls/vancouverport.webp">
+              <img src="images/thumbs/vancouverport.webp" loading="lazy" />
               <h3>Vancouver Harbour</h3>
             </a>
-            <a href="images/fulls/elcapitan.jpeg">
-              <img src="images/thumbs/elcapitan.jpeg" loading="lazy" />
+            <a href="images/fulls/elcapitan.webp">
+              <img src="images/thumbs/elcapitan.webp" loading="lazy" />
               <h3>Half Dome</h3>
             </a>
-            <a href="images/fulls/oslooperahuset.jpeg">
-              <img src="images/thumbs/oslooperahuset.jpeg" loading="lazy" />
+            <a href="images/fulls/oslooperahuset.webp">
+              <img src="images/thumbs/oslooperahuset.webp" loading="lazy" />
               <h3>Operahuset Oslo</h3>
             </a>
-            <a href="images/fulls/seacressparkseattle.jpeg">
+            <a href="images/fulls/seacressparkseattle.webp">
               <img
-                src="images/thumbs/seacressparkseattle.jpeg"
+                src="images/thumbs/seacressparkseattle.webp"
                 loading="lazy"
               />
               <h3>Seacrest Park</h3>
             </a>
             <br />
-            <a href="images/fulls/santamoncabeach.jpeg">
-              <img src="images/thumbs/santamoncabeach.jpeg" loading="lazy" />
+            <a href="images/fulls/santamoncabeach.webp">
+              <img src="images/thumbs/santamoncabeach.webp" loading="lazy" />
               <h3>Santa Monica Beach</h3>
             </a>
           </div>
 
           <div>
-            <a href="images/fulls/leavenworth.jpeg">
-              <img src="images/thumbs/leavenworth.jpeg" loading="lazy" />
+            <a href="images/fulls/leavenworth.webp">
+              <img src="images/thumbs/leavenworth.webp" loading="lazy" />
               <h3>Enchanment Park</h3>
             </a>
             <br />
-            <a href="images/fulls/lionsgatebridge.jpg">
-              <img src="images/thumbs/lionsgatebridge.jpg" loading="lazy" />
+            <a href="images/fulls/lionsgatebridge.webp">
+              <img src="images/thumbs/lionsgatebridge.webp" loading="lazy" />
               <h3>Lions Gate Bridge</h3>
             </a>
-            <a href="images/fulls/mapletreesquare.jpeg">
-              <img src="images/thumbs/mapletreesquare.jpeg" loading="lazy" />
+            <a href="images/fulls/mapletreesquare.webp">
+              <img src="images/thumbs/mapletreesquare.webp" loading="lazy" />
               <h3>Carrall St</h3>
             </a>
-            <a href="images/fulls/seattlenight.jpg">
-              <img src="images/thumbs/seattlenight.jpg" loading="lazy" />
+            <a href="images/fulls/seattlenight.webp">
+              <img src="images/thumbs/seattlenight.webp" loading="lazy" />
               <h3>Seattle Downtown</h3>
             </a>
-            <a href="images/fulls/mapletreesquare2.jpeg">
-              <img src="images/thumbs/mapletreesquare2.jpeg" loading="lazy" />
+            <a href="images/fulls/mapletreesquare2.webp">
+              <img src="images/thumbs/mapletreesquare2.webp" loading="lazy" />
               <h3>Maple Tree Square</h3>
             </a>
             <br />
             <br />
-            <a href="images/fulls/pacificpark.jpeg">
-              <img src="images/thumbs/pacificpark.jpeg" loading="lazy" />
+            <a href="images/fulls/pacificpark.webp">
+              <img src="images/thumbs/pacificpark.webp" loading="lazy" />
               <h3>Pacific Park</h3>
             </a>
-            <a href="images/fulls/sfboat.jpeg">
-              <img src="images/thumbs/sfboat.jpeg" loading="lazy" />
+            <a href="images/fulls/sfboat.webp">
+              <img src="images/thumbs/sfboat.webp" loading="lazy" />
               <h3>Fisherman's Wharf</h3>
             </a>
-            <a href="images/fulls/t-centralen.jpeg">
-              <img src="images/thumbs/t-centralen.jpeg" loading="lazy" />
+            <a href="images/fulls/t-centralen.webp">
+              <img src="images/thumbs/t-centralen.webp" loading="lazy" />
               <h3>T-Centralen</h3>
             </a>
             <br />
-            <a href="images/fulls/vancouverportnight.jpeg">
-              <img src="images/thumbs/vancouverportnight.jpeg" loading="lazy" />
+            <a href="images/fulls/vancouverportnight.webp">
+              <img src="images/thumbs/vancouverportnight.webp" loading="lazy" />
               <h3>Gastown</h3>
             </a>
           </div>
