--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>@darrelhong</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="Description" content="My simple SEO ready portfolio page" />
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
@@ -16,7 +17,9 @@
     <div id="wrapper">
       <!-- Header -->
       <header id="header">
-        <span class="avatar"><img src="images/avatar.webp" alt="" /></span>
+        <span class="avatar"
+          ><img src="images/avatar.webp" alt="avatar"
+        /></span>
         <h1>Darrel Hong</h1>
         <ul class="icons">
           <li>
@@ -76,126 +79,304 @@
         <!-- Thumbnails -->
         <section class="thumbnails">
           <div>
-            <a href="images/fulls/seattleunionstation.webp">
+            <a
+              href="images/fulls/seattleunionstation.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
               <img
                 src="images/thumbs/seattleunionstation.webp"
                 loading="lazy"
+                alt="fullsize"
               />
               <h3>Union Station</h3>
             </a>
-            <a href="images/fulls/sergelfontänen.webp">
-              <img src="images/thumbs/sergelfontänen.webp" loading="lazy" />
+            <a
+              href="images/fulls/sergelfontänen.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/sergelfontänen.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Sergelfontänen</h3>
             </a>
-            <a href="images/fulls/goldengate.webp">
-              <img src="images/thumbs/goldengate.webp" loading="lazy" />
+            <a
+              href="images/fulls/goldengate.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/goldengate.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Golden Gate Bridge</h3>
             </a>
             <br />
             <br />
-            <a href="images/fulls/canadaplace.webp">
-              <img src="images/thumbs/canadaplace.webp" loading="lazy" />
+            <a
+              href="images/fulls/canadaplace.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/canadaplace.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Coal Harbour</h3>
             </a>
             <br />
-            <a href="images/fulls/nyhavn.webp">
-              <img src="images/thumbs/nyhavn.webp" loading="lazy" />
+            <a href="images/fulls/nyhavn.webp" alt="thumbnail" loading="lazy">
+              <img
+                src="images/thumbs/nyhavn.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Nyhavn</h3>
             </a>
-            <a href="images/fulls/oslovinterpark.webp">
-              <img src="images/thumbs/oslovinterpark.webp" loading="lazy" />
+            <a
+              href="images/fulls/oslovinterpark.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/oslovinterpark.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Vinterpark</h3>
             </a>
             <br />
-            <a href="images/fulls/shsnow.webp">
-              <img src="images/thumbs/shsnow.webp" loading="lazy" />
+            <a href="images/fulls/shsnow.webp" alt="thumbnail" loading="lazy">
+              <img
+                src="images/thumbs/shsnow.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Gallerian</h3>
             </a>
-            <a href="images/fulls/woodwards43.webp">
-              <img src="images/thumbs/woodwards43.webp" loading="lazy" />
+            <a
+              href="images/fulls/woodwards43.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/woodwards43.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Woodwards 43</h3>
             </a>
           </div>
 
           <div>
-            <a href="images/fulls/sigtuna.webp">
-              <img src="images/thumbs/sigtuna.webp" loading="lazy" />
+            <a href="images/fulls/sigtuna.webp" alt="thumbnail" loading="lazy">
+              <img
+                src="images/thumbs/sigtuna.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Sigtuna</h3>
             </a>
-            <a href="images/fulls/hollywood.webp">
-              <img src="images/thumbs/hollywood.webp" loading="lazy" />
+            <a
+              href="images/fulls/hollywood.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/hollywood.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Mt Lee Drive</h3>
             </a>
             <br />
-            <a href="images/fulls/kungsgatan.webp">
-              <img src="images/thumbs/kungsgatan.webp" loading="lazy" />
+            <a
+              href="images/fulls/kungsgatan.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/kungsgatan.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Kungsportsplatsen</h3>
             </a>
-            <a href="images/fulls/vancouverport.webp">
-              <img src="images/thumbs/vancouverport.webp" loading="lazy" />
+            <a
+              href="images/fulls/vancouverport.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/vancouverport.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Vancouver Harbour</h3>
             </a>
-            <a href="images/fulls/elcapitan.webp">
-              <img src="images/thumbs/elcapitan.webp" loading="lazy" />
+            <a
+              href="images/fulls/elcapitan.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/elcapitan.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Half Dome</h3>
             </a>
-            <a href="images/fulls/oslooperahuset.webp">
-              <img src="images/thumbs/oslooperahuset.webp" loading="lazy" />
+            <a
+              href="images/fulls/oslooperahuset.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/oslooperahuset.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Operahuset Oslo</h3>
             </a>
-            <a href="images/fulls/seacressparkseattle.webp">
+            <a
+              href="images/fulls/seacressparkseattle.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
               <img
                 src="images/thumbs/seacressparkseattle.webp"
                 loading="lazy"
+                alt="fullsize"
               />
               <h3>Seacrest Park</h3>
             </a>
             <br />
-            <a href="images/fulls/santamoncabeach.webp">
-              <img src="images/thumbs/santamoncabeach.webp" loading="lazy" />
+            <a
+              href="images/fulls/santamoncabeach.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/santamoncabeach.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Santa Monica Beach</h3>
             </a>
           </div>
 
           <div>
-            <a href="images/fulls/leavenworth.webp">
-              <img src="images/thumbs/leavenworth.webp" loading="lazy" />
+            <a
+              href="images/fulls/leavenworth.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/leavenworth.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Enchanment Park</h3>
             </a>
             <br />
-            <a href="images/fulls/lionsgatebridge.webp">
-              <img src="images/thumbs/lionsgatebridge.webp" loading="lazy" />
+            <a
+              href="images/fulls/lionsgatebridge.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/lionsgatebridge.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Lions Gate Bridge</h3>
             </a>
-            <a href="images/fulls/mapletreesquare.webp">
-              <img src="images/thumbs/mapletreesquare.webp" loading="lazy" />
+            <a
+              href="images/fulls/mapletreesquare.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/mapletreesquare.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Carrall St</h3>
             </a>
-            <a href="images/fulls/seattlenight.webp">
-              <img src="images/thumbs/seattlenight.webp" loading="lazy" />
+            <a
+              href="images/fulls/seattlenight.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/seattlenight.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Seattle Downtown</h3>
             </a>
-            <a href="images/fulls/mapletreesquare2.webp">
-              <img src="images/thumbs/mapletreesquare2.webp" loading="lazy" />
+            <a
+              href="images/fulls/mapletreesquare2.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/mapletreesquare2.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Maple Tree Square</h3>
             </a>
             <br />
             <br />
-            <a href="images/fulls/pacificpark.webp">
-              <img src="images/thumbs/pacificpark.webp" loading="lazy" />
+            <a
+              href="images/fulls/pacificpark.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/pacificpark.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Pacific Park</h3>
             </a>
-            <a href="images/fulls/sfboat.webp">
-              <img src="images/thumbs/sfboat.webp" loading="lazy" />
+            <a href="images/fulls/sfboat.webp" alt="thumbnail" loading="lazy">
+              <img
+                src="images/thumbs/sfboat.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Fisherman's Wharf</h3>
             </a>
-            <a href="images/fulls/t-centralen.webp">
-              <img src="images/thumbs/t-centralen.webp" loading="lazy" />
+            <a
+              href="images/fulls/t-centralen.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/t-centralen.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>T-Centralen</h3>
             </a>
             <br />
-            <a href="images/fulls/vancouverportnight.webp">
-              <img src="images/thumbs/vancouverportnight.webp" loading="lazy" />
+            <a
+              href="images/fulls/vancouverportnight.webp"
+              alt="thumbnail"
+              loading="lazy"
+            >
+              <img
+                src="images/thumbs/vancouverportnight.webp"
+                loading="lazy"
+                alt="fullsize"
+              />
               <h3>Gastown</h3>
             </a>
           </div>
