--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>@darrelhong</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="Description" content="My simple SEO ready portfolio page" />
+    <meta name="Description" content="My Portfolio" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
   </head>
@@ -61,15 +61,6 @@
               target="_blank"
               rel="noopener"
               ><span class="label">GitHub</span></a
-            >
-          </li>
-          <li>
-            <a
-              title="Email me!"
-              href="mailto:darrel.hong@gmail.com"
-              class="icon style2 fa-envelope-o"
-              target="_blank"
-              ><span class="label">Email</span></a
             >
           </li>
         </ul>
