update resume link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="Description" content="My Portfolio" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
   </head>
   <body>
     <!-- Wrapper -->
@@ -36,7 +36,7 @@
           <li>
             <a
               title="Resume"
-              href="https://drive.google.com/file/d/1OpOPtzJhVUBZlk8hLRwnvdXl7tTz7LMU/view?usp=sharing"
+              href="https://drive.google.com/file/d/1jUx_WZzicJUw9bBVyF0ypTdfOhJTinE6/view?usp=sharing"
               class="icon style2 fa-file"
               target="_blank"
               rel="noopener"
